<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Animalie</string>
    <string name="title_activity_chat">ChatActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    login register page-->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email_username">Email atau Username</string>
    <string name="password">Password</string>
    <string name="no_account">Tidak mempunyai akun? </string>
    <string name="have_account">Sudah punya akun? </string>

    <!--    edit bio-->
    <string name="edit_bio">Ubah data diri</string>
    <string name="edit_password">Ubah katasandi</string>
    <string name="edit_fullname">Nama Lengkap</string>
    <string name="edit_username">Username</string>
    <string name="edit_workplace">Tempat bekerja</string>
    <string name="edit_profession">Pekerjaan</string>
    <string name="edit_email">Email</string>
    <string name="save">Simpan</string>
    <string name="change_password">Ubah kata sandi</string>
    <string name="current_password">Kata sandi saat ini</string>
    <string name="new_password">Kata sandi baru</string>
    <string name="confirm_password">Konfirmasi kata sandi</string>
    <string name="delete_account">Hapus akun</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="navbar_home">Home</string>
    <string name="navbar_interest">Interest</string>
    <string name="navbar_create">Create</string>
    <string name="navbar_tag">Tag</string>
    <string name="navbar_chat">Chat</string>
    <string name="navbar_profile">Profile</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- Strings related to notification-->
    <string name="set_notifications_Chat">mengirim pesan kepada anda</string>
    <string name="set_notification_like">menyukai postingan anda</string>
    <string name="set_notification_comment">mengomentari postingan anda: </string>

    <string name="person_name">Nama</string>
    <string name="badge">verification badge</string>

    <!-- Strings related to chat-->
    <string name="room_chat_receiver_name">Contact Name</string>
    <string name="room_chat_ketik_pesan">Ketik pesan disini&#8230;</string>
    <string name="room_chat_preview_message">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>

    <string name="contact_card_name">Doctor Name</string>
    <string name="contact_doctor_specialist">Specialist</string>
    <string name="contact_doctor_work_experience">10</string>

    <!-- Strings related to notification-->
    <string name="notification_readed">Tandai sudah dibaca</string>
    <string name="notification">Notifikasi</string>
    <string name="notification_username">nama</string>
    <string name="notification_description">notification</string>


    <string name="search_hint">Cari disini..</string>
    <string name="tab_latest">Terbaru</string>
    <string name="tab_popular">Popular</string>
    <string name="tab_unanswered">Belum Terjawab</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="counter">0</string>

    <string name="fullname">Full Name</string>
    <string name="username">username</string>
    <string name="date">2 min ago</string>
    <string name="post_title">Post Title</string>
    <string name="post_content">This is the post content. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vestibulum tellus et ex tristique, non suscipit urna gravida. Sed nec interdum elit. Vestibulum sit amet felis ac tortor viverra ultrices. Pellentesque eget nibh ipsum.</string>

    <string name="profile_description">profile</string>

    <string name="like_description">like</string>
    <string name="comment_description">comment</string>
    <string name="share_description">share</string>
    <string name="more_description">more</string>
    <string name="bookmark_description">bookmark</string>

    <string name="myprofile">My Profile</string>
    <string name="othprofile">Profile</string>
    <string name="chat">Chat</string>
    <string name="notificationBarTitle">Notifikasi</string>

    <string name="profession_workplace">Manager Peternakan di Perusahaan</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="certificate">Certificate</string>
    <string name="see_all">See all</string>

    <string name="certificate_title">Certificate Title</string>
    <string name="certificate_publisher">Certificate Publisher</string>
    <string name="certificate_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>

    <string name="create_post">Post</string>
    <string name="post">Post</string>
    <string name="title">Judul</string>
    <string name="category">Kategori</string>
    <string name="tag">Tag</string>
    <string name="content">Tulis disini..</string>
    <string name="send">Send</string>
    <string name="ketik_pesan_anda_disini">Ketik pesan anda disini…</string>
    <string name="mengirim_pesan">mengirim pesan kepada anda</string>
    <string name="logo_animalie">Logo_Animalie</string>
    <string name="email_atau_username">Email atau Username</string>
    <string name="tidak_mempunyai_akun">Tidak mempunyai akun?&#32; &#8200; &#8195;</string>
    <string name="registrasi">Registrasi</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="daftar">Daftar</string>
    <string name="sudah_punya_akun">Sudah punya akun?&#32; &#8200; &#8195;</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="error_text">Error: %1$s</string>
    <string name="posted_at">%1$s min ago</string>
    <string name="empty_data">Tidak ada data</string>

    <!-- Tab -->
    <string name="tab_home">Latest</string>
    <string name="tab_interest">Popular</string>
    <string name="tab_unanswerd">Unanswered</string>
    <string name="tab_mypost">My Post</string>
    <string name="tab_other_post">Post</string>
    <string name="tab_discussion">Discussion</string>
    <string name="tab_savedpost">Saved Post</string>

    <!-- Categories-->
    <string name="cow">Sapi</string>
    <string name="poultry">Unggas</string>
    <string name="goat">Kambing</string>
    <string name="sheep">Domba</string>
    <string name="fish">Ikan</string>
    <string name="other">Lainnya</string>
    <string name="lainnya">Lainnya</string>
    <string name="job">Job</string>
    <string name="di">di</string>
    <string name="belum_ada_pekerjaan">Belum ada pekerjaan</string>
    <string name="Room_chat_ketik_pesan">ketik pesan</string>

    <!--    Tags-->
    <string name="tag_name">Name tag</string>
    <string name="tag_counter">%1$s posts</string>

    <string name="comment">Tulis komentar...</string>

    <string name="appBar_name">Appbar Name</string>
    <string name="chip">chip</string>
    <string name="content_description_end_icon">Add new Tag</string>
    <string name="edit_profile_picture">Ubah foto profile</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="dark_theme">Mode Gelap</string>
    <string name="about_app">Tentang Aplikasi</string>
    <string name="edit_post">Edit Post</string>
    <string name="delete_post">Delete Post</string>
    <string name="comment_dummy" tools:ignore="ExtraTranslation">This is Comment, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="info_app">Animalie dirancang sebagai solusi untuk mengatasi tantangan dalam pengelolaan peternakan, kami telah mengembangkan sebuah aplikasi inovatif yang berfungsi sebagai platform kolaborasi antara peternak, ahli ternak, dan tenaga kesehatan hewan. Aplikasi ini menyediakan berbagai fitur yang berguna, seperti akses ke artikel dan informasi terkini seputar perawatan hewan ternak, fasilitas konsultasi langsung dengan para ahli, serta pasar online untuk penjualan produk peternakan. Dengan adanya aplikasi ini, diharapkan peternak dapat memperoleh pengetahuan yang lebih baik, mendapatkan bantuan cepat dari para ahli ketika dibutuhkan, dan juga memperluas jangkauan pasarnya dengan menjual produk melalui platform yang terintegrasi.</string>
    <string name="call_us">Contact Us</string>
    <string name="version_app">Version 1.0-alpha01</string>


</resources>
