<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home"
        android:title="@string/navbar_home" />
    <item
        android:id="@+id/interest_group"
        android:icon="@drawable/ic_search"
        android:title="@string/navbar_interest" />
    <item
        android:id="@+id/create_post"
        android:icon="@drawable/ic_notifications"
        android:title="@string/navbar_create" />
    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_profile"
        android:title="@string/navbar_chat" />
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_profile"
        android:title="@string/navbar_profile" />
</menu>