<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.editprofile.EditProfileActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/edit_bio" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="16dp">


            <!--    Profile-->
            <ImageView
                android:id="@+id/profile_photo"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_margin="8dp"
                android:contentDescription="@string/profile_description"
                android:src="@mipmap/profile_photo_round" />

            <TextView
                android:id="@+id/edit_bio_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/edit_bio"
                android:textSize="24sp"
                android:textStyle="bold" />

            <!--    Bio-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/full_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:hint="@string/edit_fullname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_username">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/workplace_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_workplace">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_workplace"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/profession_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_profession">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_profession"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/save_bio_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save" />

            <!--    Password-->
            <TextView
                android:id="@+id/edit_pass_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                android:text="@string/edit_password"
                android:textSize="24sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edit_pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/current_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/new_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_pass_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_pass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/change_pass_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_password" />

            <!--    Delete Account-->
            <Button
                android:id="@+id/delete_acc_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorError"
                android:text="@string/delete_account" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>