<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/comment_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="16dp"
    android:orientation="vertical"
    android:gravity="end"
    android:paddingHorizontal="32dp">

    <!--    BIO-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/biodata"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo_commenter"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:contentDescription="@string/profile_description"
                android:src="@mipmap/profile_photo_round" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/full_name_commenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/fullname"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/username_commenter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/username"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/date_commenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/date" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:visibility="gone"
            android:contentDescription="@string/more_description"
            android:padding="12dp"
            android:src="@drawable/ic_delete" />
    </LinearLayout>

    <!--    CONTENT-->
    <TextView
        android:id="@+id/comment_content"
        android:layout_width="match_parent"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:textColor="?attr/colorOnSecondaryContainer"
        android:padding="12dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:text="@string/comment_dummy" />

    <LinearLayout
        android:id="@+id/like_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:contentDescription="@string/like_description"
            android:padding="12dp"
            android:src="@drawable/ic_like" />

        <TextView
            android:id="@+id/like_counter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/counter"
            android:textColor="?attr/colorPrimary"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>