<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ImageView
        android:id="@+id/LogoAnimalie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo_animalie"
        app:srcCompat="@mipmap/ic_animalie_foreground" />

    <TextView
        android:id="@+id/app_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/marcellus"
        android:text="@string/app_name"
        android:textColor="@color/seed"
        android:textSize="24sp"
        android:textStyle="normal" />

    <EditText
        android:id="@+id/Username_Email_form"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="username,email"
        android:background="@drawable/rounded_background"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:ems="10"
        android:fontFamily="@font/manrope_regular"
        android:freezesText="false"
        android:hint="@string/email_atau_username"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textAlignment="gravity"
        android:textColor="@color/seed"
        android:textColorHint="@color/seed"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/NewPassword_form"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_background"
        android:backgroundTint="?attr/colorSecondaryContainer"
        android:ems="10"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColor="@color/seed"
        android:textColorHint="@color/seed" />

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/something_went_wrong"
        android:visibility="gone" />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/manrope_bold"
        android:text="@string/login"
        android:textSize="18sp"
        app:cornerRadius="8dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/NoAccoundtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/tidak_mempunyai_akun"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/RegistrasiPageLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:fontFamily="@font/manrope_bold"
            android:linksClickable="true"
            android:text="@string/registrasi"
            android:textColor="@color/seed"
            android:textColorLink="@color/seed"
            android:textSize="14sp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>
