<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/rounded_stroke"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Header -->
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/biodata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_photo"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@mipmap/profile_photo_round"
                android:contentDescription="@string/profile_description" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/fullname"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/username"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:gravity="center_vertical"
            android:text="@string/date" />


<!--                <ImageButton-->
<!--                    android:id="@+id/more_button"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_alignParentRight="true"-->
<!--                    android:background="@color/transparent"-->
<!--                    android:contentDescription="@string/more_description"-->
<!--                    android:padding="12dp"-->
<!--                    android:src="@drawable/ic_more" />-->
    </RelativeLayout>

    <!-- Post Content -->
    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/post_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/post_title"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/post_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="4"
            android:ellipsize="end"
            android:text="@string/post_content"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- Actions -->
    <RelativeLayout
        android:id="@+id/action_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/bookmark_description"
                android:padding="12dp"
                android:src="@drawable/ic_bookmark" />

            <ImageButton
                android:id="@+id/share_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/share_description"
                android:padding="12dp"
                android:src="@drawable/ic_share" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/like_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/like_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/like_description"
                    android:padding="12dp"
                    android:src="@drawable/ic_like_change" />

                <TextView
                    android:id="@+id/like_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counter"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/comment_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/comment_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/comment_description"
                    android:padding="12dp"
                    android:src="@drawable/ic_comment" />

                <TextView
                    android:id="@+id/comment_counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/counter"
                    android:textColor="?attr/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
